Fix home list styles for paragraphs and h3s so they look a lot better on mobile.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -51,6 +51,13 @@
 }
 
 
+.category-description {
+	font-size: 1.2em;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 20px;
+}
+
 .fluid-width-video-wrapper {
 	margin: 15px 0;
 }
